// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image Fit 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 bYWoze"
>
  <div
    className="StyledBox-sc-13pk1d4-0 jmbpej"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 cvPSkV"
    >
      <img
        className="StyledImage-ey4zx9-0 knmSyL"
        src="//v2.grommet.io/assets/IMG_4245.jpg"
      />
    </div>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 irlfVP"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 cvPSkV"
    >
      <img
        className="StyledImage-ey4zx9-0 hLDupc"
        src="//v2.grommet.io/assets/IMG_4245.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Image Simple 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 bYWoze"
>
  <img
    className="StyledImage-ey4zx9-0 jtkYbl"
    src="//v2.grommet.io/assets/IMG_4245.jpg"
  />
</div>
`;
